
----------------------------------------------------------------------
--- 2021-XX-XX  Release 7.32.6                                     ---
----------------------------------------------------------------------

* fixed librt handling of object names with '/' chars - Cliff Yapp
* changed fast4-g to not make references to empty regions - Cliff Yapp
* fixed nirt -L to not require database and objects - Sean Morrison
* fixed bug reading older VOL objects with file data - Sean Morrison
* fixed pixscale bug when scaling images down - Sean Morrison

----------------------------------------------------------------------
--- 2021-07-27  Release 7.32.4                                     ---
----------------------------------------------------------------------

* Added -matrix search filter for finding comb matrices - Cliff Yapp
* fixed MGED handling of long running subprocesses in script mode
        - Cliff Yapp, Sean Morrison
* improve documentation for bot modes in bot and search - Cliff Yapp
* added -o output option to GED stat command - Cliff Yapp
* fixed overlay support for drawing multiple files - Cliff Yapp
* fixed file creation for tire command - Cliff Yapp
* fixed mixing object and full path searches in MGED - Cliff Yapp
* fixed launching of ISST graphical viewer - Cliff Yapp
* Added -matrix search filter for finding comb matrices - Cliff Yapp
* fixed MGED handling of long running subprocesses in script mode
        - Cliff Yapp, Sean Morrison
* improve documentation for bot modes in bot and search - Cliff Yapp
* added -o output option to GED stat command - Cliff Yapp
* fixed overlay support for drawing multiple files - Cliff Yapp
* fixed file creation for tire command - Cliff Yapp
* fixed mixing object and full path searches in MGED - Cliff Yapp
* fixed launching of ISST graphical viewer - Cliff Yapp

----------------------------------------------------------------------
--- 2021-02-06  Release 7.32.2                                     ---