@@ -1,6 +1,6 @@
-if (TARGET libgcv_gdal)
-  BRLCAD_REGRESSION_TEST(regress-dem "gcv;libgcv_gdal" EXEC gcv)
-endif (TARGET libgcv_gdal)
+if (TARGET gcv-gdal)
+  BRLCAD_REGRESSION_TEST(regress-dem "gcv;gcv-gdal" EXEC gcv)
+endif (TARGET gcv-gdal)
 
 DISTCLEAN(
   "${CMAKE_CURRENT_BINARY_DIR}/regress-dem.log"
